--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -35,27 +35,27 @@ h6 {
 
 h1 {
   margin-top: 0;
-  font-size: $type-size-2;
+  font-size: $h-size-1;
 }
 
 h2 {
-  font-size: $type-size-3;
+  font-size: $h-size-2;
 }
 
 h3 {
-  font-size: $type-size-4;
+  font-size: $h-size-3;
 }
 
 h4 {
-  font-size: $type-size-5;
+  font-size: $h-size-4;
 }
 
 h5 {
-  font-size: $type-size-6;
+  font-size: $h-size-5;
 }
 
 h6 {
-  font-size: $type-size-7;
+  font-size: $h-size-6;
 }
 
 small,
@@ -126,7 +126,6 @@ blockquote {
 /* links */
 
 a {
-  text-decoration: none;
   &:focus {
     @extend %tab-focus;
   }
