--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,6 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
+<script data-ad-client="ca-pub-1418443722497332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <!-- end custom head snippets -->
