--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
 {% endif %}
 
 <!-- using mermaid for rendering Diagram and flow chart -->
-<script src="/cookbook-dev/assets/js/mermaid.min.js"></script>
+<script src="/assets/js/mermaid.min.js"></script>
 <script>mermaid.initialize({startOnLoad:true});</script>
 
 <!--[if IE]>
