change masthead sticky

--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -6,6 +6,7 @@
   position: fixed;
   background: white;
   top: 0;
+  width: 100%;
   border-bottom: 1px solid $border-color;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
