--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -10,7 +10,8 @@ html {
 
 body {
   margin: 0;
-  padding: 70px;
+  margin-top: 70px;
+  padding: 0;
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
