date 대신 updated 기재

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -34,7 +34,7 @@
       <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %} -->
     {% if post.date %}
-    <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>    {{ post.date | modified: "%B %d %Y" }}</p>
+    <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>    {{ post.modified | modified: "%B %d %Y" }}</p>
     {% endif %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
