--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -32,7 +32,7 @@
       /* calculate height of nav list
          viewport height - nav height - masthead x-padding
       */
-      max-height: calc(100vh - #{$nav-height});
+      max-height: calc(100vh - #{$nav-height} - 1em);
     }
   }
 
@@ -41,7 +41,7 @@
   }
 
   > * {
-    margin-top: 1em;
+    margin-top: 2em;
     margin-bottom: 1em;
   }
 
