single date -> updatedat

--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -33,6 +33,9 @@
     <!--{% if post.read_time %}
       <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %} -->
+    {% if post.last_modified_at %}
+    <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>    {{ post.last_modified_at | date: "%B %d %Y" }}</p>
+    {% endif %}
     {% if post.date %}
     <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>    {{ post.date | date: "%B %d %Y" }}</p>
     {% endif %}
