--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -34,11 +34,10 @@
       <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %} -->
     {% if post.last_modified_at %}
-    <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>    {{ post.last_modified_at | date: "%B %d %Y" }}</p>
-    {% endif %}
-    {% if post.date %}
+      <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>    {{ post.last_modified_at | date: "%B %d %Y" }}</p>
+    {% elseif post.date %}
     <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i>    {{ post.date | date: "%B %d %Y" }}</p>
-    {% endif %}
+      {% endif %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
 </div>
